# nsi-pronote

./: .gitignore  README.md  pyproject.toml
api/: db.json
src/: Classe.py  Eleve.py  Matiere.py  Note.py
tests/: test_classe.py  test_eleve.py  test_structure.py
uml/: classes.puml
