[tool.poetry]
name = "Pronote"
version = "0.1.0"
description = ""
authors = ["Didier Gillard <didier.gillard@univ-reims.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
requests = "^2.32.3"
pytest-mock = "^3.14.0"
json-server-py = "^0.1.11"
mutmut = "^3.2.2"
coverage = "^7.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
